parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> axioma
Rule 1     axioma -> LLAVEA contenido LLAVEC
Rule 2     axioma -> LLAVEA LLAVEC
Rule 3     contenido -> asignacion
Rule 4     contenido -> asignacion COMA
Rule 5     contenido -> asignacion COMA contenido
Rule 6     asignacion -> CADENACON PUNTOS valor
Rule 7     asignacion -> CADENASIN PUNTOS valor
Rule 8     valor -> numero
Rule 9     valor -> comparacion
Rule 10    valor -> NULL
Rule 11    valor -> TR
Rule 12    valor -> FL
Rule 13    valor -> CADENACON
Rule 14    valor -> axioma
Rule 15    numero -> INT
Rule 16    numero -> REAL
Rule 17    numero -> NCIENT
Rule 18    numero -> BIN
Rule 19    numero -> OCT
Rule 20    numero -> HEX
Rule 21    comparacion -> numero LT numero
Rule 22    comparacion -> numero GT numero
Rule 23    comparacion -> numero EQ numero
Rule 24    comparacion -> numero LE numero
Rule 25    comparacion -> numero GE numero

Terminals, with rules where they appear

BIN                  : 18
CADENACON            : 6 13
CADENASIN            : 7
COMA                 : 4 5
EQ                   : 23
FL                   : 12
GE                   : 25
GT                   : 22
HEX                  : 20
INT                  : 15
LE                   : 24
LLAVEA               : 1 2
LLAVEC               : 1 2
LT                   : 21
NCIENT               : 17
NULL                 : 10
OCT                  : 19
PUNTOS               : 6 7
REAL                 : 16
TR                   : 11
error                : 

Nonterminals, with rules where they appear

asignacion           : 3 4 5
axioma               : 14 0
comparacion          : 9
contenido            : 1 5
numero               : 8 21 21 22 22 23 23 24 24 25 25
valor                : 6 7

Parsing method: LALR

state 0

    (0) S' -> . axioma
    (1) axioma -> . LLAVEA contenido LLAVEC
    (2) axioma -> . LLAVEA LLAVEC

    LLAVEA          shift and go to state 2

    axioma                         shift and go to state 1

state 1

    (0) S' -> axioma .



state 2

    (1) axioma -> LLAVEA . contenido LLAVEC
    (2) axioma -> LLAVEA . LLAVEC
    (3) contenido -> . asignacion
    (4) contenido -> . asignacion COMA
    (5) contenido -> . asignacion COMA contenido
    (6) asignacion -> . CADENACON PUNTOS valor
    (7) asignacion -> . CADENASIN PUNTOS valor

    LLAVEC          shift and go to state 4
    CADENACON       shift and go to state 6
    CADENASIN       shift and go to state 7

    contenido                      shift and go to state 3
    asignacion                     shift and go to state 5

state 3

    (1) axioma -> LLAVEA contenido . LLAVEC

    LLAVEC          shift and go to state 8


state 4

    (2) axioma -> LLAVEA LLAVEC .

    $end            reduce using rule 2 (axioma -> LLAVEA LLAVEC .)
    COMA            reduce using rule 2 (axioma -> LLAVEA LLAVEC .)
    LLAVEC          reduce using rule 2 (axioma -> LLAVEA LLAVEC .)


state 5

    (3) contenido -> asignacion .
    (4) contenido -> asignacion . COMA
    (5) contenido -> asignacion . COMA contenido

    LLAVEC          reduce using rule 3 (contenido -> asignacion .)
    COMA            shift and go to state 9


state 6

    (6) asignacion -> CADENACON . PUNTOS valor

    PUNTOS          shift and go to state 10


state 7

    (7) asignacion -> CADENASIN . PUNTOS valor

    PUNTOS          shift and go to state 11


state 8

    (1) axioma -> LLAVEA contenido LLAVEC .

    $end            reduce using rule 1 (axioma -> LLAVEA contenido LLAVEC .)
    COMA            reduce using rule 1 (axioma -> LLAVEA contenido LLAVEC .)
    LLAVEC          reduce using rule 1 (axioma -> LLAVEA contenido LLAVEC .)


state 9

    (4) contenido -> asignacion COMA .
    (5) contenido -> asignacion COMA . contenido
    (3) contenido -> . asignacion
    (4) contenido -> . asignacion COMA
    (5) contenido -> . asignacion COMA contenido
    (6) asignacion -> . CADENACON PUNTOS valor
    (7) asignacion -> . CADENASIN PUNTOS valor

    LLAVEC          reduce using rule 4 (contenido -> asignacion COMA .)
    CADENACON       shift and go to state 6
    CADENASIN       shift and go to state 7

    asignacion                     shift and go to state 5
    contenido                      shift and go to state 12

state 10

    (6) asignacion -> CADENACON PUNTOS . valor
    (8) valor -> . numero
    (9) valor -> . comparacion
    (10) valor -> . NULL
    (11) valor -> . TR
    (12) valor -> . FL
    (13) valor -> . CADENACON
    (14) valor -> . axioma
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX
    (21) comparacion -> . numero LT numero
    (22) comparacion -> . numero GT numero
    (23) comparacion -> . numero EQ numero
    (24) comparacion -> . numero LE numero
    (25) comparacion -> . numero GE numero
    (1) axioma -> . LLAVEA contenido LLAVEC
    (2) axioma -> . LLAVEA LLAVEC

    NULL            shift and go to state 17
    TR              shift and go to state 18
    FL              shift and go to state 19
    CADENACON       shift and go to state 13
    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26
    LLAVEA          shift and go to state 2

    valor                          shift and go to state 14
    numero                         shift and go to state 15
    comparacion                    shift and go to state 16
    axioma                         shift and go to state 20

state 11

    (7) asignacion -> CADENASIN PUNTOS . valor
    (8) valor -> . numero
    (9) valor -> . comparacion
    (10) valor -> . NULL
    (11) valor -> . TR
    (12) valor -> . FL
    (13) valor -> . CADENACON
    (14) valor -> . axioma
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX
    (21) comparacion -> . numero LT numero
    (22) comparacion -> . numero GT numero
    (23) comparacion -> . numero EQ numero
    (24) comparacion -> . numero LE numero
    (25) comparacion -> . numero GE numero
    (1) axioma -> . LLAVEA contenido LLAVEC
    (2) axioma -> . LLAVEA LLAVEC

    NULL            shift and go to state 17
    TR              shift and go to state 18
    FL              shift and go to state 19
    CADENACON       shift and go to state 13
    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26
    LLAVEA          shift and go to state 2

    valor                          shift and go to state 27
    numero                         shift and go to state 15
    comparacion                    shift and go to state 16
    axioma                         shift and go to state 20

state 12

    (5) contenido -> asignacion COMA contenido .

    LLAVEC          reduce using rule 5 (contenido -> asignacion COMA contenido .)


state 13

    (13) valor -> CADENACON .

    COMA            reduce using rule 13 (valor -> CADENACON .)
    LLAVEC          reduce using rule 13 (valor -> CADENACON .)


state 14

    (6) asignacion -> CADENACON PUNTOS valor .

    COMA            reduce using rule 6 (asignacion -> CADENACON PUNTOS valor .)
    LLAVEC          reduce using rule 6 (asignacion -> CADENACON PUNTOS valor .)


state 15

    (8) valor -> numero .
    (21) comparacion -> numero . LT numero
    (22) comparacion -> numero . GT numero
    (23) comparacion -> numero . EQ numero
    (24) comparacion -> numero . LE numero
    (25) comparacion -> numero . GE numero

    COMA            reduce using rule 8 (valor -> numero .)
    LLAVEC          reduce using rule 8 (valor -> numero .)
    LT              shift and go to state 28
    GT              shift and go to state 29
    EQ              shift and go to state 30
    LE              shift and go to state 31
    GE              shift and go to state 32


state 16

    (9) valor -> comparacion .

    COMA            reduce using rule 9 (valor -> comparacion .)
    LLAVEC          reduce using rule 9 (valor -> comparacion .)


state 17

    (10) valor -> NULL .

    COMA            reduce using rule 10 (valor -> NULL .)
    LLAVEC          reduce using rule 10 (valor -> NULL .)


state 18

    (11) valor -> TR .

    COMA            reduce using rule 11 (valor -> TR .)
    LLAVEC          reduce using rule 11 (valor -> TR .)


state 19

    (12) valor -> FL .

    COMA            reduce using rule 12 (valor -> FL .)
    LLAVEC          reduce using rule 12 (valor -> FL .)


state 20

    (14) valor -> axioma .

    COMA            reduce using rule 14 (valor -> axioma .)
    LLAVEC          reduce using rule 14 (valor -> axioma .)


state 21

    (15) numero -> INT .

    LT              reduce using rule 15 (numero -> INT .)
    GT              reduce using rule 15 (numero -> INT .)
    EQ              reduce using rule 15 (numero -> INT .)
    LE              reduce using rule 15 (numero -> INT .)
    GE              reduce using rule 15 (numero -> INT .)
    COMA            reduce using rule 15 (numero -> INT .)
    LLAVEC          reduce using rule 15 (numero -> INT .)


state 22

    (16) numero -> REAL .

    LT              reduce using rule 16 (numero -> REAL .)
    GT              reduce using rule 16 (numero -> REAL .)
    EQ              reduce using rule 16 (numero -> REAL .)
    LE              reduce using rule 16 (numero -> REAL .)
    GE              reduce using rule 16 (numero -> REAL .)
    COMA            reduce using rule 16 (numero -> REAL .)
    LLAVEC          reduce using rule 16 (numero -> REAL .)


state 23

    (17) numero -> NCIENT .

    LT              reduce using rule 17 (numero -> NCIENT .)
    GT              reduce using rule 17 (numero -> NCIENT .)
    EQ              reduce using rule 17 (numero -> NCIENT .)
    LE              reduce using rule 17 (numero -> NCIENT .)
    GE              reduce using rule 17 (numero -> NCIENT .)
    COMA            reduce using rule 17 (numero -> NCIENT .)
    LLAVEC          reduce using rule 17 (numero -> NCIENT .)


state 24

    (18) numero -> BIN .

    LT              reduce using rule 18 (numero -> BIN .)
    GT              reduce using rule 18 (numero -> BIN .)
    EQ              reduce using rule 18 (numero -> BIN .)
    LE              reduce using rule 18 (numero -> BIN .)
    GE              reduce using rule 18 (numero -> BIN .)
    COMA            reduce using rule 18 (numero -> BIN .)
    LLAVEC          reduce using rule 18 (numero -> BIN .)


state 25

    (19) numero -> OCT .

    LT              reduce using rule 19 (numero -> OCT .)
    GT              reduce using rule 19 (numero -> OCT .)
    EQ              reduce using rule 19 (numero -> OCT .)
    LE              reduce using rule 19 (numero -> OCT .)
    GE              reduce using rule 19 (numero -> OCT .)
    COMA            reduce using rule 19 (numero -> OCT .)
    LLAVEC          reduce using rule 19 (numero -> OCT .)


state 26

    (20) numero -> HEX .

    LT              reduce using rule 20 (numero -> HEX .)
    GT              reduce using rule 20 (numero -> HEX .)
    EQ              reduce using rule 20 (numero -> HEX .)
    LE              reduce using rule 20 (numero -> HEX .)
    GE              reduce using rule 20 (numero -> HEX .)
    COMA            reduce using rule 20 (numero -> HEX .)
    LLAVEC          reduce using rule 20 (numero -> HEX .)


state 27

    (7) asignacion -> CADENASIN PUNTOS valor .

    COMA            reduce using rule 7 (asignacion -> CADENASIN PUNTOS valor .)
    LLAVEC          reduce using rule 7 (asignacion -> CADENASIN PUNTOS valor .)


state 28

    (21) comparacion -> numero LT . numero
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX

    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26

    numero                         shift and go to state 33

state 29

    (22) comparacion -> numero GT . numero
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX

    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26

    numero                         shift and go to state 34

state 30

    (23) comparacion -> numero EQ . numero
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX

    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26

    numero                         shift and go to state 35

state 31

    (24) comparacion -> numero LE . numero
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX

    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26

    numero                         shift and go to state 36

state 32

    (25) comparacion -> numero GE . numero
    (15) numero -> . INT
    (16) numero -> . REAL
    (17) numero -> . NCIENT
    (18) numero -> . BIN
    (19) numero -> . OCT
    (20) numero -> . HEX

    INT             shift and go to state 21
    REAL            shift and go to state 22
    NCIENT          shift and go to state 23
    BIN             shift and go to state 24
    OCT             shift and go to state 25
    HEX             shift and go to state 26

    numero                         shift and go to state 37

state 33

    (21) comparacion -> numero LT numero .

    COMA            reduce using rule 21 (comparacion -> numero LT numero .)
    LLAVEC          reduce using rule 21 (comparacion -> numero LT numero .)


state 34

    (22) comparacion -> numero GT numero .

    COMA            reduce using rule 22 (comparacion -> numero GT numero .)
    LLAVEC          reduce using rule 22 (comparacion -> numero GT numero .)


state 35

    (23) comparacion -> numero EQ numero .

    COMA            reduce using rule 23 (comparacion -> numero EQ numero .)
    LLAVEC          reduce using rule 23 (comparacion -> numero EQ numero .)


state 36

    (24) comparacion -> numero LE numero .

    COMA            reduce using rule 24 (comparacion -> numero LE numero .)
    LLAVEC          reduce using rule 24 (comparacion -> numero LE numero .)


state 37

    (25) comparacion -> numero GE numero .

    COMA            reduce using rule 25 (comparacion -> numero GE numero .)
    LLAVEC          reduce using rule 25 (comparacion -> numero GE numero .)

